# discord-agentic-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 5fcde2f1df52_make_embedding_nullable.py  700eb402673f_initial_migration.py  8ea8e0e68351_add_base_models.py  e6d11e3541ad_make_agentfield_nullable.py  fa706af4dfdf_add_cascade_delete.py
src/: main.py  models.py
src/agent/: factory.py  graph.py  prompts.py
src/agent/tools/: __init__.py  add.py  get_channel_info.py  get_server_info.py  get_user_info.py  react_to_message.py  search.py  send_message.py  subtract.py
src/bot/: __init__.py  bot.py
src/bot/commands/: __init__.py  find.py  instruction.py  search.py
src/bot/events/: __init__.py  guild.py  message.py  ready.py
src/command/: __init__.py  instruction.py
src/core/: __init__.py  bot.py  config.py  database.py  llm.py  logging.py
src/event/: __init__.py  message.py  ready.py
src/utils/: embedding.py
