[project]
name = "discord-agentic-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Alimi David", email = "davidalimi148@gmail.com"},
    {name = "Theedon", email = "faniyantoyin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "discord-py (>=2.6.3,<3.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langchain[google-genai] (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "psycopg (>=3.2.10,<4.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "google-genai (>=1.37.0,<2.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "langchain-google-community (>=2.0.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["src"]
